# Simple-Password-Manager

./: Cargo.toml  README.md  secrets.json.enc
src/: cli.rs  crypto.rs  main.rs  main_CLI.rs  model.rs  storage.rs
