[package]
name = "password_keeper"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version="0.5", features = ["std"] }
base64 = "0.22.1"
clap = "4.5.40"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zeroize = "1.8.1"
